# ComfyUI_ProPainter_Nodes

./: .gitignore  README.md  __init__.py  propainter.py  propainter_inference.py  propainter_nodes.py  pyproject.toml
examples/: propainter-inpainting-workflow.json
model/: misc.py  propainter.py  recurrent_flow_completion.py  vgg_arch.py
model/canny/: canny_filter.py  filter.py  gaussian.py  kernels.py  sobel.py
model/modules/: base_module.py  deformconv.py  flow_comp_raft.py  flow_loss_utils.py  sparse_transformer.py  spectral_norm.py
model/modules/RAFT/: corr.py  datasets.py  demo.py  extractor.py  raft.py  update.py
model/modules/RAFT/utils/: augmentor.py  flow_viz.py  flow_viz_pt.py  frame_utils.py
utils/: download_utils.py  image_util.py  image_utils.py  model_utils.py
